# sora

./: .gitignore  AGENTS.md  BACKLOG.md  CLAUDE.md  Cargo.toml
.github/workflows/: ci.yml
crates/sora-audio/: Cargo.toml
crates/sora-audio/src/: analyze.rs  decode.rs  error.rs  lib.rs  loudness.rs  spectrum.rs
crates/sora-audio/tests/: analyze.rs
crates/sora-cli/: Cargo.toml
crates/sora-cli/src/: main.rs  output.rs
crates/sora-cli/src/commands/: audio.rs  automation.rs  config.rs  daw.rs  mcp.rs  midi.rs  mod.rs  profile.rs  project.rs  schema.rs  send.rs
crates/sora-core/: Cargo.toml
crates/sora-core/src/: error.rs  fsutil.rs  lib.rs  profile.rs  schema.rs  select.rs  types.rs  validate.rs
crates/sora-core/src/midi/: analyze.rs  compile.rs  decompile.rs  inspect.rs  mod.rs  playback.rs  timing.rs  verify.rs
crates/sora-core/src/model/: automation.rs  config.rs  context.rs  mod.rs  plan.rs  profile.rs
crates/sora-core/tests/: golden.rs
crates/sora-core/tests/golden/: drum_groove.mid  palm_muted_riff.mid
crates/sora-daw/: Cargo.toml
crates/sora-daw/assets/studio-one/: Sora Surface.device  Sora Surface.surface.xml  classfactory.xml  ext-metainfo.xml  installdata.xml  package-metainfo.xml  service.js
crates/sora-daw/src/: adapter.rs  error.rs  generic.rs  lib.rs  merge.rs  types.rs
crates/sora-daw/src/studio_one/: bridge.rs  mod.rs  setup.rs  song.rs  trigger.rs
crates/sora-mcp/: Cargo.toml
crates/sora-mcp/src/: gate.rs  lib.rs  ops.rs  report.rs  server.rs
crates/sora-mcp/tests/: server_tools.rs
docs/: journey-map.md  technical-requirements.md  use-case.md  vision.md
examples/heavier7strings-riff/: README.md  sora.config.json
examples/heavier7strings-riff/devices/: heavier7strings.profile.json
examples/heavier7strings-riff/exports/: guitar-riff-v1.plan.json
references/: genre-targets.json
schemas/: automation-plan.schema.json  device-profile.schema.json  part-plan.schema.json  project-context.schema.json  sora-config.schema.json
