[workspace]
resolver = "3"
members = ["crates/sora-core", "crates/sora-audio", "crates/sora-cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/dino3616/sora"

[workspace.dependencies]
sora-core = { path = "crates/sora-core" }
sora-audio = { path = "crates/sora-audio" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
jsonschema = "0.33"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
midly = "0.5"
rand = "0.9"
rand_chacha = "0.9"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"

[profile.release]
lto = "thin"
strip = "symbols"
