[workspace]
resolver = "3"
members = ["crates/sora-core", "crates/sora-audio", "crates/sora-cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/dino3616/sora"

[workspace.dependencies]
sora-core = { path = "crates/sora-core" }
sora-audio = { path = "crates/sora-audio" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
jsonschema = "0.33"
serde_path_to_error = "0.1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
clap = { version = "4", features = ["derive"] }
midly = "0.5"
rand = "0.9"
rand_chacha = "0.9"

[workspace.lints.clippy]
# clippy::all をリポジトリ全体で常時 deny(行単位/テストでの個別 allow は可)
all = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"

[profile.release]
lto = "thin"
strip = "symbols"
