[package]
name = "sora-audio"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Audio decoding and analysis for Sora"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
symphonia = { workspace = true }
ebur128 = { workspace = true }
realfft = { workspace = true }

[lints]
workspace = true
