[package]
name = "sora-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Sora CLI — the single-binary tool layer"

[[bin]]
name = "sora"
path = "src/main.rs"

[dependencies]
sora-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }

[lints]
workspace = true
