[package]
name = "sora-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types, MIDI compiler, and validation for Sora"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
jsonschema = { workspace = true }
serde_path_to_error = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
midly = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }

[dev-dependencies]
insta = { version = "1", features = ["json"] }
tempfile = "3"

[lints]
workspace = true
