[package]
name = "sora-daw"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Sora DAW integration layer: DawAdapter trait and adapters"

[dependencies]
sora-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
midir = { workspace = true }
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
quick-xml = "0.41.0"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
