[package]
name = "sora-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Sora MCP server — exposes the tool layer over MCP with control-level gating"

[dependencies]
sora-core = { workspace = true }
sora-audio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
midir = { workspace = true }
rmcp = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
